--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -59,23 +59,121 @@ virtual ~Human() = default;
 `Чисто виртуальный метод` - у метода нет реализации, ее должен предоставить кто-то из наследников. Если в классе есть виртуальный метод, то класс - `абстрактный` (такой класс обычно не используется сам по себе). Если метод чисто виртуальный, то не перезаписать его (`override`) не страшно (ошибки компиляции не будет), однако если не сделать реализацию в наследнике, то наследник тоже станет абстрактным классом.
 ```C++
 struct Base {
-virtual void foo() const = 0; // Base::foo() - чисто виртуальный метод.
+    virtual void foo() const = 0; // Base::foo() - чисто виртуальный метод.
 };
 struct Derived : Base {
-// void foo() override {}
-// Так как foo() нет, то Derived::foo() - чисто виртуальный метод.
-// Следствие: Derived - "абстрактный класс".
+    // void foo() override {}
+    // Так как foo() нет, то Derived::foo() - чисто виртуальный метод.
+    // Следствие: Derived - "абстрактный класс".
 };
+
 void foo(const Base &b) {
-b.foo();
+    b.foo();
 }
+
 int main() {
-Derived d; // Запрещено создавать абстрактные классы.
-foo(d);
+    Derived d; // Запрещено создавать абстрактные классы.
+    foo(d);
 }
+```
+В этом случае объект `Derived` можно создавать:
+```C++
+struct Base {
+    virtual void foo() const = 0; // Base::foo() - чисто виртуальный метод.
+};
+
+struct Derived : Base {
+    void foo() const override {
+    }
+    // Derived::foo() - обычный виртуальный метод.
+    // Derived - обычный класс, не абстрактный.
+};
+
+// void bar(Base b) { // Запрещено создавать объекты типа "абстрактный класс".
+// }
+
+int main() {
+    Derived d;
+    foo(d);
+}
+```
+Чисто виртуальные методы нельзя вызывать напрямую из базового класса:
+```C++
+#include <iostream>
+
+struct Base {
+    virtual void foo() = 0;
+};
+
+struct Derived : Base {
+    void foo() override {
+        Base::foo();  // Link error.
+        std::cout << "Derived\n";
+    }
+};
+
+int main() {
+    Derived d;
+    d.foo();
+
+    d.Base::foo();  // Link error.
+}
+```
+Виртуальные методы можно сделать final, чтобы в наследнике наследника его переопределить не получилось:
+```C++
+struct Base {
+    virtual void foo() = 0;
+};
+
+struct Derived : Base {
+    void foo() override final {
+    }
+};
+
+struct MegaDerived : Derived {
+    void foo() override { //здесь ошибка
+    }
+};
 ```
 
 ## Slicing (срезка объектов) при присваивании полиморфного класса в переменную типа "базовый класс", как защититься (хранить только ссылки/умные указатели)
+```C++
+// Так нельзя
+Derived d;
+Base b = d; //slicing
+
+// Так можно
+Derived d;
+Base &b = d; //basecast или upcast
+
+Derived d;
+Derived *dptr = &d;
+Base *bptr = dptr;
+```
+Еще пример:
+```C++
+#include <iostream>
+#include <vector>
+
+struct Human {
+    std::string first_name, last_name;
+};
+
+struct Student : Human {
+    std::string group; 
+
+int main() {
+    std::vector<Human> people;
+    std::vector<Student> students;
+}
+```
+Вектор выделяет память для `Human`, тогда мы не можем добавить `Student`. Отдельно делать векторы для `Human` и `Student` странно, зачем тогда наследование. 
+
+Нужно использовать `unique_ptr`
+```C++
+std::vector<std::unique_ptr<Human>> people;
+```
+Каждый элемент вектора - указатель на Human и Student, тогда объекты могут иметь разные типы, занимать разное место в памяти, а вектору норм, потому что он знает размер указателя. При удалении вектор вызовет деструктор у умных указателей, а они вызовут удаление у всех объектов (здесь нужны виртуальный деструкторы). Без указателя будет `slicing`
 
 ## Хранение полиморфных объектов в контейнерах
 
