--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -1,3 +1,4 @@
+`Полиморфный класс` <=> есть хотя бы одна виртуальная функция
 ## Виртуальные методы и их отличия от невиртуальных
 `Виртуальная функция` — это функция, которая определяется в базовом классе, а любой порожденный класс может ее переопределить.
 ```C++
@@ -177,3 +178,22 @@ std::vector<std::unique_ptr<Human>> people;
 Каждый элемент вектора - указатель на Human и Student, тогда объекты могут иметь разные типы, занимать разное место в памяти, а вектору норм, потому что он знает размер указателя. При удалении вектор вызовет деструктор у умных указателей, а они вызовут удаление у всех объектов (здесь нужны виртуальный деструкторы). Без указателя будет `slicing`
 
 ## `dynamic_cast` для полиморфных классов (по указателям и ссылкам)
+`dynamic_cast` нужен, чтобы проверить верно ли, что какой-то объект данного типа работает с указателями (с ссылками он похож на `static_cast`, так как предполагает, что конвертация всегда успешная, иначе вызывает ошибку компиляции). В случае с указателями `dynamic_cast` возвращает либо `nullptr`, если конвертация прошла неуспешно, в другой случае возвращает указатель. `dynamic_cast` работает только если `Base` - полиморфный (потому что создается таблица виртуальных функций и в ней мы можем сравнить указатели).
+```C++
+struct Base {  
+    virtual void foo() {};  
+};  
+  
+struct Derived1 : Base {  
+//    void foo() override {}  
+};  
+  
+void f(const Base &b) {  
+    // dynamic_cast работает только если Base "полиморфный".  
+    // Класс "полиморфный" <=> есть хотя бы одна виртуальная функция (обычно есть виртуальный деструктор).  
+    const Derived1 *d1 = dynamic_cast<const Derived1*>(&b);
+    if (d1) {
+    	std::cout << "Derived1\n";
+    }
+}
+```
