--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -180,6 +180,7 @@ std::vector<std::unique_ptr<Human>> people;
 ## `dynamic_cast` для полиморфных классов (по указателям и ссылкам)
 `dynamic_cast` нужен, чтобы проверить верно ли, что какой-то объект данного типа работает с указателями (с ссылками он похож на `static_cast`, так как предполагает, что конвертация всегда успешная, иначе вызывает ошибку компиляции). В случае с указателями `dynamic_cast` возвращает либо `nullptr`, если конвертация прошла неуспешно, в другой случае возвращает указатель. `dynamic_cast` работает только если `Base` - полиморфный (потому что создается таблица виртуальных функций и в ней мы можем сравнить указатели).
 ```C++
+// Для указателей
 struct Base {  
     virtual void foo() {};  
 };  
@@ -195,5 +196,33 @@ void f(const Base &b) {
     if (d1) {
     	std::cout << "Derived1\n";
     }
+}
+
+
+
+// Для ссылок
+struct Base {
+    virtual void foo() {};
+    virtual void bar() {};
+};
+
+struct Derived1 : virtual Base {
+    void foo() override {
+        bar(); 
+    }
+};
+
+struct Derived2 : virtual Base {
+    void bar() override {
+    }
+};
+
+struct DerivedX : Derived1, Derived2 {
+};
+
+int main() {
+    DerivedX a;
+    Derived1 &d1 = a;
+    Derived2 &d2 = dynamic_cast<Derived2 &>(d1);
 }
 ```
