--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -1,4 +1,4 @@
-`Полиморфный класс` <=> есть хотя бы одна виртуальная функция
+# `Полиморфный класс` <=> есть хотя бы одна виртуальная функция
 ## Виртуальные методы и их отличия от невиртуальных
 `Виртуальная функция` — это функция, которая определяется в базовом классе, а любой порожденный класс может ее переопределить.
 ```C++
