--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -19,6 +19,15 @@ int foo() {
 }
 ```
 
+### Комбинации всяких `try`/`catch`
+* Можно ли написать `throw` не в функции, а сразу в `try`? `Да`
+* Можно ли `throw` в `try`? `Да`
+* Можно ли вкладывать `try` друг в друга? `Да, но зачем`
+* Можно ли `throw;` написать в `do_something`? `Да`
+* Можно ли `throw;` написать в `catch (const std::exception &e)`, а не в `catch (...)`, будет ли принципиально отличаться от `throw e;`? `Можно, не будет`
+* Когда надо писать `catch (...) { throw; }`? `Никогда, это бессмысленно`
+* Может ли исключение вылететь из функции, внутри которой нет ни одного throw? `может, потому что можно вызвать кидающую функцию`
+
 ## Раскрутка стека: автоматический вызов деструкторов, в том числе в `new`/`new[]`, конструкторе, конструкторах полей
 Если где-нибудь возникает `throw`, то компилятор начинает выполнять раскрутку стека (automatic storage duration): начинает идти вверх по стеку, т.е. делает `return` из функций по очереди, пока не встретит `try`/`catch`, далее ищет соответствующий `catch` и выполняет его, если находит. Если вылетело исключение, то код дальше не исполняется.
 
