--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -29,9 +29,9 @@ int foo() {
 * Может ли исключение вылететь из функции, внутри которой нет ни одного throw? `может, потому что можно вызвать кидающую функцию`
 
 ## Раскрутка стека: автоматический вызов деструкторов, в том числе в `new`/`new[]`, конструкторе, конструкторах полей
-Если где-нибудь возникает `throw`, то компилятор начинает выполнять раскрутку стека (automatic storage duration): начинает идти вверх по стеку, т.е. делает `return` из функций по очереди, пока не встретит `try`/`catch`, далее ищет соответствующий `catch` и выполняет его, если находит. Если вылетело исключение, то код дальше не исполняется.
+Если где-нибудь возникает `throw`, то компилятор начинает выполнять раскрутку стека (automatic storage duration): начинает идти вверх по стеку, т.е. делает `return` из функций по очереди (`return` в смысле - удалили локальные переменные и немедленно завершили выполнять код функции), пока не встретит `try`/`catch`, далее ищет соответствующий `catch` и выполняет его, если находит. Если вылетело исключение, то код дальше не исполняется.
 
-Нужно понимать, что в момент выкидывания исключения через `throw`, все созданные объекты на текущем уровне сразу удаляются (у них корректно вызываются деструкторы) и код дальше не выполняется.
+Нужно понимать, что в момент выкидывания исключения через `throw`, все созданные объекты на текущем уровне сразу удаляются (у них корректно вызываются деструкторы в порядке, обратном созданию) и код дальше не выполняется.
 * `catch` будет обрабатывать все исключения, выкинутые из блока `try`
 * `catch` не обрабатывает исключения, выкинутые из другого `catch` на текущем уровне
 * Необработанное исключение летит по уровням вверх, уничтожая все объекты на каждом уровне, пока не попадет в `try` или в `main` (если попадет в `main`, то программа завершится с данной ошибкой)
@@ -50,6 +50,8 @@ int main() {
 ```
 Следующий код Non exception-safe, переменная x не будет удалена. Чтобы этого избежать, все выносим в деструкторы.
 
+### Про `new`/`new[]`, конструктор, конструктор полей
+
 ## Необходимость ловить исключения по ссылке
 ```C++
                ---> std::logic_error ---> std::invalid_argument
@@ -58,6 +60,10 @@ std::exception
               \
                ---> std::runtime_error
 ```
+Исключния: 
+* наследуются
+* `what()` - виртуальная функция
+
 С помощью них очень удобно ловить исключения и узнавать ошибку через метод `what()` у `std::excetions`
 ```C++
 void bar(int n) {
