--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -60,7 +60,7 @@ std::exception
               \
                ---> std::runtime_error
 ```
-Исключния: 
+`Исключения`: 
 * наследуются
 * `what()` - виртуальная функция
 
