--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -51,6 +51,8 @@ int main() {
 Следующий код Non exception-safe, переменная x не будет удалена. Чтобы этого избежать, все выносим в деструкторы.
 
 ### Про `new`/`new[]`, конструктор, конструктор полей
+`new`/`new[]` могут кинуть `std::bad_alloc` 
+Если исключение вылетело из конструктора, то объект считается не созданным. Из-за этого могут возникать утечки памяти, так как для не полностью сконструированных объектов не будет вызван деструктор
 
 ## Необходимость ловить исключения по ссылке
 ```C++
