--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -22,8 +22,8 @@ int foo() {
 ### Комбинации всяких `try`/`catch`
 * Можно ли написать `throw` не в функции, а сразу в `try`? `Да`
 * Можно ли `throw` в `try`? `Да`
-* Можно ли вкладывать `try` друг в друга? `Да, но зачем`
-* Можно ли `throw;` написать в `do_something`? `Да`
+* Можно ли вкладывать `try` друг в друга? `Да. Может быть надо, чтобы, например, обработать снаружи какие-то общие ошибки, а внутри — более точечно. Или чтобы наружний обрабатывал исключения, которые вылетают из catch внутреннего`
+* Можно ли `throw;` написать в `do_something`? `Можно, но неясно, какое ему исключение выбрасывать`
 * Можно ли `throw;` написать в `catch (const std::exception &e)`, а не в `catch (...)`, будет ли принципиально отличаться от `throw e;`? `Можно, не будет`
 * Когда надо писать `catch (...) { throw; }`? `Никогда, это бессмысленно`
 * Может ли исключение вылететь из функции, внутри которой нет ни одного throw? `может, потому что можно вызвать кидающую функцию`
@@ -51,8 +51,12 @@ int main() {
 Следующий код Non exception-safe, переменная x не будет удалена. Чтобы этого избежать, все выносим в деструкторы.
 
 ### Про `new`/`new[]`, конструктор, конструктор полей
-`new`/`new[]` могут кинуть `std::bad_alloc` 
-Если исключение вылетело из конструктора, то объект считается не созданным. Из-за этого могут возникать утечки памяти, так как для не полностью сконструированных объектов не будет вызван деструктор
+* Какие исключения может кидать `new Foo()`, `new Foo[10]`? 
+`new`/`new[]` могут кинуть `std::bad_alloc`, либо может вылететь исключение из конструктора. Утечки не происходит, `new` сам всё освобождает и вызывает деструкторы. Потому что у нас не происходит возврата значения `=>` мы бы не могли сами вызвать `delete`
+* Что если исключение кинул конструтор поля в структуре? Что если конструктор делает `throw`?
+Если исключение вылетело из конструктора, то объект считается не созданным. У уже созданных полей вызываются деструкторы
+* А что если он делает throw, но ловит исключение и нормально завершается? 
+Тут как раз всё нормально. С точки зрения языка: вызвали конструктор, он внутри что-то поделал, завершился успешно `=>` объект создан. То, что у него где-то внутри исключения вызывались и ловились, не пролетя сквозь весь стек — нестрашно
 
 ## Необходимость ловить исключения по ссылке
 ```C++
@@ -105,6 +109,8 @@ delete[] x;
 
 #### basic
 Отсутствие утечек ресурсов и сохранение инвариантов класса
+`Бытовой пример` - копируем один вектор в другой по одному элементу. Если при копировании вылетело исключение, то никаких утечек и нарушений инвариантов не было, но состояние программы изменилось `=>` базовая гарантия
+`Еще один пример`
 ```C++
 struct WeirdObject {
     WeirdObject() {}
