--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -98,7 +98,7 @@ int main() {
 Если принимать не по ссылке, то будет slicing и метод `what()` будет уже чем-то непонятным. Более того, `std::exception` - это полиморфный класс, его лучше не ловить по значению.
 
 ## exception safety: определения no/basic/strong/nothrow
-#### no safety
+#### `no safety`
 Если вылетело исключение, у программы может возникнуть некорректное состояние (утечки памяти, нарушение инвариантов)
 ```C++
 foo *x = new foo[2];
@@ -107,7 +107,7 @@ delete[] x;
 ```
 В `do_smth()` вылетело исключение и произойдет утечка памяти, так как не вызвали `delete[]`
 
-#### basic
+#### `basic`
 Отсутствие утечек ресурсов и сохранение инвариантов класса
 `Бытовой пример` - копируем один вектор в другой по одному элементу. Если при копировании вылетело исключение, то никаких утечек и нарушений инвариантов не было, но состояние программы изменилось `=>` базовая гарантия
 `Еще один пример`
@@ -127,14 +127,14 @@ int main(){
 }
 ```
 
-#### strong
+#### `strong`
 Исключение вылетает, но состояние программы от этого не меняется.
 ```C++
 std::vector<int> a(1'000'000);
 a.push_back(20);  // Если не получилось, то вектор 'a' не изменился
 ```
 
-#### nothrow
+#### `nothrow`
 Код никогда не кидает исключения
 ```C++
 int a = 10, b = 20;
