--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -23,7 +23,7 @@
 В С++ есть 3 уровня доступа:
 * `public` - доступ к членам даже извне класса
 * `protected` - доступ только для дружественных и дочерних классов
-* `public` - доступ имеют только другие члены этого класса
+* `private` - доступ имеют только другие члены этого класса
 
 ## Наследование: базовый синтаксис, включая вызов конструктора базового класса
 ```C++
@@ -38,4 +38,4 @@ struct Derived : Base { // Дочерний класс
     }
 };
 ```
-Когда вызываем конструктор наследника важно сначала сконструировать базовый класс, для этого вызываем его конструктор в листе инициализации
+Когда вызываем конструктор наследника важно сначала сконструировать базовый класс, для этого вызываем его конструктор в листе инициализации (если не вызвать - вызовется конструктор базового класса по умолчанию)
