--- a/must-have/Классы.md
+++ b/must-have/Классы.md
@@ -39,3 +39,12 @@ struct Derived : Base { // Дочерний класс
 };
 ```
 Когда вызываем конструктор наследника важно сначала сконструировать базовый класс, для этого вызываем его конструктор в листе инициализации (если не вызвать - вызовется конструктор базового класса по умолчанию)
+
+Как это играет с `member initializer list`? То есть как одновременно указать и параметры конструктора базового класса, и параметры к конструкторам полей?
+```C++
+Derived(int y_) : Base(10), y(y_){
+}
+
+// Derived(int y_) : y(y_), Base(10) { так будет -Wreorder
+// }
+```
