--- a/must-have/Многопоточность.md
+++ b/must-have/Многопоточность.md
@@ -24,7 +24,7 @@ int main() {
 ```
 `Важно`: всегда передаются копии параметров (если все-таки хотим передать ссылку, то надо явно писать `std::ref()`)
 
-Если `main` закончится раньше, чем какой-то поток, то, строго говоря, происходят утечки. Для этого нужен `.join()` - программа ждет, пока поток завершится, и освобождает его ресурсы. 
+Если `main` закончится раньше, чем какой-то поток, то, строго говоря, происходят утечки (например в потоке могла выделиться память на куче, которую надо почистить, сам стек тоже надо почистить). Для этого нужен `.join()` - программа ждет, пока поток завершится, и освобождает его ресурсы. 
 
 `.detach()` - обещаем больше не делать `join()`, теперь ОС отвечает за сборку мусора в потоке. Возникает только если нам вообще ничего от потока никогда не будет нужно. Единственный разумный пример: мы создаём сетевой сервер, который в бесконечном цикле плодит потоки для клиентов.
 
