--- a/must-have/Многопоточность.md
+++ b/must-have/Многопоточность.md
@@ -106,6 +106,8 @@ std::cout << "data is " << data << "\n";
 ```
 В данном случае может произойти так, что выведется нечетное значение. Так происходит, потому что между проверкой и выводом, внутри потока (который захватил `data` по ссылке - может произойти изменение).
 
+На самом деле тут без `std::mutex` вообще `UB`, так как один поток меняет переменную, а другой из неё в это же время читает
+
 Чтобы избежать гонки данных, следует воспользоваться `std::mutex`. Еще можно использовать атомарные снимки (снятие снимка - сохраняем значение в новую переменную и работаем с ней)
 ```C++
 std::mutex m;
