--- a/must-have/Многопоточность.md
+++ b/must-have/Многопоточность.md
@@ -24,9 +24,14 @@ int main() {
 ```
 `Важно`: всегда передаются копии параметров (если все-таки хотим передать ссылку, то надо явно писать `std::ref()`)
 
-Если `main` закончится раньше, чем какой-то поток, то, строго говоря, происходят утечки (например в потоке могла выделиться память на куче, которую надо почистить, сам стек тоже надо почистить). Для этого нужен `.join()` - программа ждет, пока поток завершится, и освобождает его ресурсы. 
+`.join()` - программа ждет, пока поток завершится, и освобождает его ресурсы. 
 
 `.detach()` - обещаем больше не делать `join()`, теперь ОС отвечает за сборку мусора в потоке. Возникает только если нам вообще ничего от потока никогда не будет нужно. Единственный разумный пример: мы создаём сетевой сервер, который в бесконечном цикле плодит потоки для клиентов.
+
+1. Поток при создании какие-то ресурсы себе откусывает. Например, стек и номер. Хотим, чтобы у них был один владелец.
+2. По умолчанию ОС требует, чтобы их освободили явно при помощи `join`. То есть владелец — тот, кто создал.
+3. Но можно сказать `detach`, тогда к потоку больше обращаться через `join` нельзя, зато он сам все свои ресурсы освободит при завершении. То есть владелец — сам поток.
+Тогда, если мы не вызвали ни `join`, ни `detach` будет утечка
 
 ### `std::mutex`
 `std::mutex` - переменная, которую можно захватывать и всего один поток может это сделать, а если попытается другой поток захватить, а её ещё не отпустили, то этот поток начинает её "ждать".
