--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -20,6 +20,7 @@ auto b = 0;
 auto c = {3.14156};
 auto d(1.41421f);
 ```
+Типо должен быть, исходя из инициализируемого значения. Смотрим на тип выражения справа, на категорию или (если там переменная) "как было объявлено" - не смотрим
 
 ## `range-based for`, в том числе с `auto&` и `const auto&`
 ```C++
@@ -31,6 +32,8 @@ for (const auto &i : v) {
     ...
 }
 ```
+Если использовать `for (auto i : v)` или `for (int i : v)`, то мы будем работать с копиями элементов контейнера
+
 Мы обычно используем, чтобы ходить по элементам контейнера без обращения к их индексам.
 
 Но есть и другие конструкции, подробнее [тут](https://en.cppreference.com/w/cpp/language/range-for)
