--- a/must-have/Переменные.md
+++ b/must-have/Переменные.md
@@ -1,6 +1,8 @@
 ## Статическая типизация
 Язык С++ - статически типизированный язык. То есть тип переменной указывается при ее объявлении и в ходе программы его нельзя изменить. Это позволяет проверять типы данных на этапе компиляции, а не во время выполнения программы
 
+А как же `std::any`? Ну тип то остается `std::any`. А для любых операций, которые делают что-то со значением, мы должны явно сделать `any_cast<...>`
+
 ## Тип переменной
 У каждой переменной есть тип. Он определяет, какие значения может принимать переменная и какие операции с ней разрешены
 
