--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -25,18 +25,20 @@ int main() {
 ```
 Виртуальная функция отличается об обычной функции тем, что для обычной функции связывание вызова функции с ее определением осуществляется на этапе компиляции. Для виртуальных функций это происходит во время выполнения программы.
 
+Это помогает сделать один общий интерфейс, заданный в базовом классе, а у каждого потомка будет своя конкретная реализация методов, нужная именно ему. При вызове будет проверяться фактический тип объекта, и будет вызываться соответствующая реализация (а не как с обычными функцями на стадии компиляции).
+
 ## Необходимость виртуального деструктора
 ### Проблема
 ```C++
 struct Human {
-	std::string first_name, last_name; // Possibly wrong.
+	std::string first_name, last_name;
 	Human(std::string first_name_, std::string last_name_)
 	: first_name(std::move(first_name_)), last_name(std::move(last_name_)) {
 }
 };
 
 struct Student : Human {
-	std::string group; // Possibly wrong.
+	std::string group;
 	Student(std::string first_name_, std::string last_name_, std::string group_)
 		: Human(std::move(first_name_), std::move(last_name_))
 		, group(std::move(group_)) {}
@@ -178,7 +180,8 @@ std::vector<std::unique_ptr<Human>> people;
 Каждый элемент вектора - указатель на Human и Student, тогда объекты могут иметь разные типы, занимать разное место в памяти, а вектору норм, потому что он знает размер указателя. При удалении вектор вызовет деструктор у умных указателей, а они вызовут удаление у всех объектов (здесь нужны виртуальный деструкторы). Без указателя будет `slicing`
 
 ## `dynamic_cast` для полиморфных классов (по указателям и ссылкам)
-`dynamic_cast` нужен, чтобы проверить верно ли, что какой-то объект данного типа работает с указателями (с ссылками он похож на `static_cast`, так как предполагает, что конвертация всегда успешная, иначе вызывает ошибку компиляции). В случае с указателями `dynamic_cast` возвращает либо `nullptr`, если конвертация прошла неуспешно, в другой случае возвращает указатель. `dynamic_cast` работает только если `Base` - полиморфный (потому что создается таблица виртуальных функций и в ней мы можем сравнить указатели).
+`dynamic_cast` позволяет проверить реальный (динамический) тип объекта, на который показывает ссылка/указатель. Почему может отличаться от выясненного на этапе компиляции: как раз из-за наследования. Вот лежит `Base*`, а по факту там может быть аж целый `Derived1`. В случае с указателями `dynamic_cast` возвращает либо `nullptr`, если конвертация прошла неуспешно, в другом случае возвращает указатель. Со ссылками аналогична, только при сбое выкидывает `std::bad_cast` (так как не бывает "нулевой ссылки")
+`dynamic_cast` работает только если `Base` - полиморфный (потому что создается таблица виртуальных функций и в ней мы можем сравнить указатели). 
 ```C++
 // Для указателей
 struct Base {  
@@ -203,26 +206,13 @@ void f(const Base &b) {
 // Для ссылок
 struct Base {
     virtual void foo() {};
-    virtual void bar() {};
 };
 
-struct Derived1 : virtual Base {
-    void foo() override {
-        bar(); 
-    }
+struct Derived : Base {
+//    void foo() override {}
 };
 
-struct Derived2 : virtual Base {
-    void bar() override {
-    }
-};
-
-struct DerivedX : Derived1, Derived2 {
-};
-
-int main() {
-    DerivedX a;
-    Derived1 &d1 = a;
-    Derived2 &d2 = dynamic_cast<Derived2 &>(d1);
+void f(Base &b) {
+    Derived &d1 = dynamic_cast<Derived &>(b);
 }
 ```
