--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -188,16 +188,16 @@ struct Base {
     virtual void foo() {};  
 };  
   
-struct Derived1 : Base {  
+struct Derived : Base {  
 //    void foo() override {}  
 };  
   
 void f(const Base &b) {  
     // dynamic_cast работает только если Base "полиморфный".  
     // Класс "полиморфный" <=> есть хотя бы одна виртуальная функция (обычно есть виртуальный деструктор).  
-    const Derived1 *d1 = dynamic_cast<const Derived1*>(&b);
-    if (d1) {
-    	std::cout << "Derived1\n";
+    const Derived *d = dynamic_cast<const Derived*>(&b);
+    if (d) {
+    	std::cout << "Derived\n";
     }
 }
 
@@ -212,7 +212,7 @@ struct Derived : Base {
 //    void foo() override {}
 };
 
-void f(Base &b) {
-    Derived &d1 = dynamic_cast<Derived &>(b);
+void f(const Base &b) {
+    const Derived &d = dynamic_cast<const Derived &>(b);
 }
 ```
