--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -1,5 +1,5 @@
 ## Использование строк в стиле Си: отличия `char s[10]` и `const char *s`, хранение в структурах, преобразование с `std::string`
-Для хранения строк используется массив байт `char arr[N]`, где `N` - `длина строки + 1` (так как массив всегда должен заканчиваться 0 символом). Можем завести указатель на строчку и вывести ее
+Для хранения строк используется массив байт `char arr[N]`, где `N` - `длина строки + 1` (так как строки в стиле Си всегда должны заканчиваться 0 символом). Можем завести указатель на строчку и вывести ее
 ```C++
 char arr[] = "Hello";
 // char arr[] = {'H', 'e', 'l', 'l', 'o', 0 /*'\0'*/};
@@ -8,7 +8,7 @@ std::cout << sizeof(arr) << "\n";
 char *str = arr;
 std::cout << str << "\n";
 ```
-Если в конце не будет `\0` символа - `UB`
+Если в конце не будет `\0` символа, и мы начнём вызывать всякие функции, которые ожидают этот ноль в конце, начнут его искать, не найдут, выйдут за границу массива - `UB`
 
 `char s[]` - массив байт
 
@@ -75,8 +75,10 @@ int main() {
 
 #### `std::string`
 Это обёртка над сишными строками, которые умеют больше и сами следят за строкой, её размером и тд. Но можно попросить у `std::string` и сишную строку.
-* `std::string::c_str()` - вернет копию строчки
-* `std::string::data()` - вернет константный указатель на начало строки
+
+На самом деле `c_str()` и `data()` с C++11 возвращают одно и то же. Просто до C++11 не было гарантии, что `data()` возвращает null-terminated string.
+
+Важно понимать, что `c_str()` возвращает указатель на память, которой всё ещё владеет `std::string`
 
 ## Операции со строками в стиле Си: конкатенция, получение длины, безопасная альтернатива для `gets` и `scanf("%s")`
 Время жизни строкового литерала - `static`. За ним полностью следит компилятор, это константная память, её изменения запрещены. Поэтому указатели нужны константные.
@@ -102,7 +104,7 @@ void my_strcat(char *a, const char *b) {
     a[a_pos] = 0;
 }
 ```
-Такой свой конкатенатор вызывает `UB`, потому что никто не гарантировал нам, что в память после этой строки можно еще что-то записывать
+Такой свой конкатенатор вызывает `UB` (но если памяти хватало - то не будет), потому что никто не гарантировал нам, что в память после этой строки можно еще что-то записывать.
 
 Попробуем написать лучше
 ```C++
@@ -168,7 +170,6 @@ gets(command);  // Может случиться переполнение буф
 char command[10];
 std::fgets(command, sizeof command, stdin);  // Всегда делает null-terminated строчку.
                                              // Обрезает ввод.
-// Плюсовый std::string не обрезает, но может слопать всю память :(
 ```
 
 #### `scanf("%s")`
@@ -188,7 +189,7 @@ std::fgets(command, sizeof command, stdin);  // Всегда делает null-t
 * %[] Просматривает набор символов
 * %% Считывает символ %
 
-Может возникнуть `UB`
+Может возникнуть `UB` (тоже самое переполнение буффера, что и в `gets`)
 ```C++
 {
     char buf[5];
