--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -217,6 +217,18 @@ scanf("%d%9s%d", &x, s, &y);
 ```
 
 ## Массивы массивов в языке Си (вроде `int**`): выделение, освобождение, использование
+В Си выделение и освобождение памяти происходит через `malloc`/`free`
+```C++
+int length;
+int *points;
+// ... получили значение length (длина массива)
+points = (int *)malloc(length * sizeof(int)); // Выделели память
+free(points); // Освободили память
+```
+#### Разница между `int arr[3][4][5]` и `int ***arr` с точки зрения "как выглядит в памяти"
+* `int arr[3][4][5]` - выделяется стек нужного размера, то есть все лежит в линию
+* `int ***arr` - несколько блоков в памяти, которые могут лежать не подряд
+
 Можно попросить многомерный массив, тогда элементы будут лежать подряд
 ```C++
 int arr[3][4][5]{};
