--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -229,6 +229,7 @@ free(points); // Освободили память
 * `int arr[3][4][5]` - выделяется стек нужного размера, то есть все лежит в линию
 * `int ***arr` - несколько блоков в памяти, которые могут лежать не подряд
 
+#### Использование
 Можно попросить многомерный массив, тогда элементы будут лежать подряд
 ```C++
 int arr[3][4][5]{};
