--- a/must-have/Си.md
+++ b/must-have/Си.md
@@ -173,7 +173,7 @@ std::fgets(command, sizeof command, stdin);  // Всегда делает null-t
 ```
 
 #### `scanf("%s")`
-`scanf` - ввода общего назначения, считывающей данные из пото­ка stdin. Она может считывать данные всех базовых типов и автоматически конвертировать их в нужный внутренний формат.
+`scanf` - ввода общего назначения, считывающей данные из потока stdin. Она может считывать данные всех базовых типов и автоматически конвертировать их в нужный внутренний формат.
 * %с Считать один символ
 * %d Считать десятичное число целого типа
 * %i Считать десятичное число целого типа
@@ -227,7 +227,7 @@ free(points); // Освободили память
 ```
 #### Разница между `int arr[3][4][5]` и `int ***arr` с точки зрения "как выглядит в памяти"
 * `int arr[3][4][5]` - выделяется стек нужного размера, то есть все лежит в линию
-* `int ***arr` - несколько блоков в памяти, которые могут лежать не подряд
+* `int ***arr` - несколько блоков в памяти, которые могут лежать не подряд (и надо самому выделять блоки под указатели на блоки следующего уровня)
 
 #### Использование
 Можно попросить многомерный массив, тогда элементы будут лежать подряд
