--- a/must-have/Термины.md
+++ b/must-have/Термины.md
@@ -10,8 +10,19 @@
 
 `Static` - объект начинает жить при запуске программы и заканчивает жить с концом ее работы
 
+Строго говоря, необязательно при запуске программы. Например локальные `static`-переменные начинают жить когда по ним в первый раз выполнение проходится.
+
 ## Undefined behavior: что может произойти, примеры:
-При `UB` поведение программы не предсказуемо. 
+При `UB` поведение программы не предсказуемо (даже до строчки в которой возник `UB`). 
+
+Есть такой [пример](https://devblogs.microsoft.com/oldnewthing/20140627-00/?p=633). Если кратко, то в программе
+```C++
+printf("hello\n"); 
+fflush(stdout); 
+int *x = nullptr; 
+*x = 10;
+```
+Есть `UB` и может даже не вывестись `hello\n`, если компилятор какими-то оптимизациями догадается, что в этом коде всегда `UB` => можно считать, что он никогда не выполнится
 
 Примеры: 
 * обращение за границы массива
