--- a/must-have/Функции.md
+++ b/must-have/Функции.md
@@ -2,12 +2,15 @@
 `Объявление функции` - информирует компилятор о названии функции, возвращаемом типе и аргументах.
 
 `Определение функции` - содержит алгоритм, который будет выполнен при вызове функции.
+
+Объявление функции может пригодиться, когда мы пишем свою библиотеку (`.h` файл), чтобы другие пользователи тоже могли ее использовать, но не знали реализации методов
+
 ## Вызов функции 
 ```C++
 func_name();
 func_name(arg1, arg2);
 ```
-Если у функции есть параметры по умолчанию, их можно не передавать 
+Если у функции есть параметры по умолчанию (`func(int arg = 0)`), их можно не передавать 
 
 ## Возвращаемое значение
 Оператор `return` указывает значение, которое будет возвращаться. Если функция не возвращает значение, указывается тип вовзрата `void`
