--- a/must-have/Термины.md
+++ b/must-have/Термины.md
@@ -4,7 +4,7 @@
 `Свободная функция` - любая функция, которая не является функцией-членом, то есть объявлена вне класса/структуры
 
 ## Время жизни объекта: автоматическое, динамическое, статическое
-`Automatic` - объект автоматически привязан к охватывающей области и будет автоматически уничтожен при выходе из нее
+`Automatic` - объект автоматически привязан к охватывающей области (это блок `{ ... }`) и будет автоматически уничтожен при выходе из нее
 
 `Dynamic` - время жизни объекта находится под непосредственным контролем пользователя
 
