--- a/must-have/Полиморфные_классы.md
+++ b/must-have/Полиморфные_классы.md
@@ -27,6 +27,11 @@ int main() {
 
 Это помогает сделать один общий интерфейс, заданный в базовом классе, а у каждого потомка будет своя конкретная реализация методов, нужная именно ему. При вызове будет проверяться фактический тип объекта, и будет вызываться соответствующая реализация (а не как с обычными функцями на стадии компиляции).
 
+#### Когда нужны виртуальные функции?
+Где возникает ситуация, когда мы во время компиляции не знаем, что у нас за объект?
+
+`Пример`: у нас есть 2 куска кода. Один читает ввод пользователя и дает нам полимофрный объект, другой - вызывает методы. Тогда во втором куске мы реально не знаем заранее, что вызовется (напоминает фабрику из `lab06`).
+
 ## Необходимость виртуального деструктора
 ### Проблема
 ```C++
