--- a/must-have/Исключения.md
+++ b/must-have/Исключения.md
@@ -26,7 +26,7 @@ int foo() {
 * Можно ли `throw;` написать в `do_something`? `Можно, но неясно, какое ему исключение выбрасывать`
 * Можно ли `throw;` написать в `catch (const std::exception &e)`, а не в `catch (...)`, будет ли принципиально отличаться от `throw e;`? `Можно, не будет`
 * Когда надо писать `catch (...) { throw; }`? `Никогда, это бессмысленно`
-* Может ли исключение вылететь из функции, внутри которой нет ни одного throw? `может, потому что можно вызвать кидающую функцию`
+* Может ли исключение вылететь из функции, внутри которой нет ни одного `throw`? `может, потому что можно вызвать кидающую функцию`
 
 ## Раскрутка стека: автоматический вызов деструкторов, в том числе в `new`/`new[]`, конструкторе, конструкторах полей
 Если где-нибудь возникает `throw`, то компилятор начинает выполнять раскрутку стека (automatic storage duration): начинает идти вверх по стеку, т.е. делает `return` из функций по очереди (`return` в смысле - удалили локальные переменные и немедленно завершили выполнять код функции), пока не встретит `try`/`catch`, далее ищет соответствующий `catch` и выполняет его, если находит. Если вылетело исключение, то код дальше не исполняется.
@@ -55,7 +55,7 @@ int main() {
 `new`/`new[]` могут кинуть `std::bad_alloc`, либо может вылететь исключение из конструктора. Утечки не происходит, `new` сам всё освобождает и вызывает деструкторы. Потому что у нас не происходит возврата значения `=>` мы бы не могли сами вызвать `delete`
 * Что если исключение кинул конструтор поля в структуре? Что если конструктор делает `throw`?
 Если исключение вылетело из конструктора, то объект считается не созданным. У уже созданных полей вызываются деструкторы
-* А что если он делает throw, но ловит исключение и нормально завершается? 
+* А что если он делает `throw`, но ловит исключение и нормально завершается? 
 Тут как раз всё нормально. С точки зрения языка: вызвали конструктор, он внутри что-то поделал, завершился успешно `=>` объект создан. То, что у него где-то внутри исключения вызывались и ловились, не пролетя сквозь весь стек — нестрашно
 
 ## Необходимость ловить исключения по ссылке
@@ -109,7 +109,9 @@ delete[] x;
 
 #### `basic`
 Отсутствие утечек ресурсов и сохранение инвариантов класса
+
 `Бытовой пример` - копируем один вектор в другой по одному элементу. Если при копировании вылетело исключение, то никаких утечек и нарушений инвариантов не было, но состояние программы изменилось `=>` базовая гарантия
+
 `Еще один пример`
 ```C++
 struct WeirdObject {
