--- a/must-have/Основные_конструкции_С++.md
+++ b/must-have/Основные_конструкции_С++.md
@@ -7,7 +7,7 @@ static_cast< new_type > ( expr )
 ## Синтаксис объявления пространств имён, обращения к элементу внутри пространства имён
 ```C++
 namespace bank {
-    void get_mone() {};
+    void get_money() {};
 }
 
 bank::get_money();
